Fix scrollbar

--- a/src/Components/Aside/aside-filters.sass
+++ b/src/Components/Aside/aside-filters.sass
@@ -23,6 +23,11 @@ aside
     top: 0
     left: 0
     z-index: 6
+    overflow: scroll
+    -ms-overflow-style: none
+    scrollbar-width: none
+    &::-webkit-scrollbar
+      display: none
     .mobile-filter-title
       display: block
       width: 100%
